--- a/main.css
+++ b/main.css
@@ -1,5 +1,18 @@
+h1, h2 {
+    margin: 30px 0;
+}
+body {
+    text-align: center;
+}
 textarea {
     resize: none;
+}
+#preview-display {
+    height: 240px;
+}
+#preview-display h3 {
+    margin-top: 81px;
+    margin-bottom: 81px;
 }
 .preview-toolbox .flex-table-item-primary {
     padding: 0 8px;
@@ -12,7 +25,4 @@ textarea {
     height: 80px;
     margin: 16px 0;
     font-family: 'Courier New', Monaco, monospace;
-}
-footer {
-    text-align: center;
 }
